# x-skill

./: .env.example  AGENTS.md  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
docs/: api-reference.md  architecture.md  commands.md  development.md  rust-rewrite-plan.md  source-types.md
locales/: en.yaml  zh.yaml
src/: agents.rs  cli.rs  config.rs  constants.rs  error.rs  frontmatter.rs  git.rs  http.rs  i18n.rs  installer.rs  local_lock.rs  main.rs  output.rs  plugin_manifest.rs  skill_lock.rs  skills.rs  source_parser.rs  telemetry.rs  test_utils.rs  types.rs
src/commands/: add.rs  check.rs  config.rs  find.rs  init.rs  install.rs  list.rs  mod.rs  remove.rs  sync.rs  update.rs
src/prompts/: mod.rs  search_multiselect.rs
src/providers/: mod.rs  registry.rs  types.rs  wellknown.rs
tests/: cli_tests.rs
