[package]
name = "x-skill"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
description = "The open agent skills ecosystem"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive", "color"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "process", "time", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
reqwest = { version = "0.12", features = ["json"] }
git2 = "0.19"
cliclack = "0.5"
console = "0.16"
thiserror = "2"
anyhow = "1"
dirs = "5"
dotenvy = "0.15"
sha2 = "0.10"
tempfile = "3"
walkdir = "2"
regex = "1"
futures = "0.3"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
lto = true
strip = true
codegen-units = 1
